--- a/index.html
+++ b/index.html
@@ -118,20 +118,20 @@
 
             </div>
             <div class="flex justify-center">
-                <div class="absolute top-1/2 text-center -mt-7">
-                    <h1 class=" text-2xl md:text-7xl text-center pt-0 text-white font-extrabold">Exotic tastes at your
+                <div class="absolute bottom-28 md:bottom-0 md:top-44 lg:top-56 text-center ">
+                    <h1 class=" text-xl md:text-7xl text-center pt-0 text-white font-extrabold">Exotic tastes at your
                         <br> doorstep
                     </h1>
                     <p class="text-base md:text-xl md:font-medium md:mt-4 md:mb-7 text-white">We supply highly quality
                         organic products</p>
                     <button
-                        class="btn-error md:text-xl md:font-extrabold text-white rounded-lg md:px-8 md:py-4 hover:bg-gray-500 duration-75 ">Shop
+                        class="btn-error md:text-xl md:font-extrabold text-white rounded-lg px-4 md:px-8 md:py-4 hover:bg-gray-500 duration-75 ">Shop
                         Now
                     </button>
                 </div>
             </div>
 
-            <div class="flex gap-8 justify-center hidden lg:flex bg-slate-50 rounded-xl absolute bottom-8 left-96">
+            <div class="flex gap-8 justify-center  hidden w-3/5 lg:flex  lg:left-80 shadow-md bg-slate-50 rounded-xl absolute lg:bottom-8 ">
                 <img src="./images/fruit1.png" alt="fruit">
                 <img src="./images/fruit2.png" alt="fruit">
                 <img src="./images/fruit3.png" alt="fruit">
@@ -622,7 +622,7 @@
 
 
     </main>
-    <footer class="footer footer-center mt-2 p-10 bg-[#121212] text-white text-base-content rounded">
+    <footer class="footer footer-center mt-20 p-10 bg-[#121212] text-white text-base-content rounded">
         <div class="flex flex-col md:flex-row ">
             <a href=""><img src="./images/logo.png" alt="logo"></a>
             <h2 class="text-lg md:text-4xl font-extrabold">Fruit Burst</h2>
