added a fixing issue

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
             </div>
 
-            <div class="flex gap-8 justify-center  hidden w-3/5 lg:flex  lg:left-80 shadow-md bg-slate-50 rounded-xl absolute lg:bottom-8 ">
+            <div class="flex gap-8 justify-center  hidden w-3/5 lg:flex  lg:left-80 lg:bottom-2 shadow-md bg-slate-50 rounded-xl absolute  ">
                 <img src="./images/fruit1.png" alt="fruit">
                 <img src="./images/fruit2.png" alt="fruit">
                 <img src="./images/fruit3.png" alt="fruit">
